# model-zoo

./: .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
scripts/: utils.py
scripts/gptqmodel/: 2bit.py  3bit.py  4bit.py  README.md  mixed_4_3bit.py
