[project]
name = "model-zoo"
version = "0.1.0"
description = "Personal experiment repo for eager (model) level optimization techniques."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core Deep Learning
    "numpy==2.2.6",
    "pandas==2.3.3",
    "datasets==4.4.1",
    # Transformers Ecosystem
    "transformers==4.57.3",
    "tokenizers==0.22.1",
    "accelerate==1.10.1",
    "huggingface-hub==0.36.0",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "protobuf==6.33.2",
    # Evaluation & Metrics
    "evaluate==0.4.6",
    "rouge_score==0.1.2",
    "sacrebleu==2.5.1",
    "lm-eval>=0.4.11",
    "vllm==0.14.1",
    # Utilities
    "tqdm==4.67.1",
    "regex==2025.11.3",
    "nltk==3.9.2",
    "langdetect==1.0.9",
    "immutabledict==4.2.2",
    # Quantization & Compression
    "compressed-tensors==0.13.0",
    "gptqmodel>=5.7.0",
    "torchao>=0.16.0",
    # Math Verification
    "math-verify==0.8.0",
    "antlr4-python3-runtime==4.11.0",
    "sympy==1.14.0",
    # Torch Extensions
    "torch-c-dlpack-ext==0.1.4",
]

[project.urls]
Repository = "https://github.com/namgyu-youn/model-zoo"
